# csad2526409ProdanVasyl17

./: CMakeLists.txt  ci.cmd  ci.sh  i2c_master_rx.vhd  i2c_master_tx.vhd  math_operations.h  task1.txt  task2.txt  task3.txt  task4.txt  task5.txt  tb_i2c_master.vhd
.github/workflows/: ci.yml
github/workflows/: ci.yml
tests/: unit_tests.cpp
